reactor(ai): apply openrewrite